# SewIC

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  configuration.py  klay_script.py  pyproject.toml  requirements.txt
examples/: __main__.py  build_gds.py  configuration.py
examples/design_blocks/gf180mcu/: cell1rw.sp
examples/design_blocks/sky_130/: in1.sp
examples/design_blocks/sky_130/n_mos/: n_mos.cir
examples/design_blocks/sky_130/p_mos/: p_mos.cir
examples/sky130/: configuration.py
examples/sky130/subcells/: simple_pair.py  simple_row.py
ic_stitcher/: __init__.py  custom_cell.py
ic_stitcher/abstract/: global_configs.py
ic_stitcher/configurations/: __init__.py  abstract.py  abstract_configs.py  global_configs.py  layout.py  layout_configs.py  layout_global_configs.py  schematic_configs.py  schematic_global_configs.py
ic_stitcher/custom/: __init__.py  connections.py  custom_cell.py  instance.py
ic_stitcher/klayout_pcell/: __init__.py  pcell_gen.py
ic_stitcher/layout/: __init__.py  floorplaner.py  global_configs.py
ic_stitcher/schematic/: __init__.py  global_configs.py  netlister.py
ic_stitcher/utils/: Logging.py  compatability.py  logger.py  simple_progress_bar.py  test.py
